<?xml version="1.0" encoding="UTF-8"?>
<!--
  Copyright (c) Petr Panteleyev. All rights reserved.
  Licensed under the BSD license. See LICENSE file in the project root for full license information.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.panteleyev.money</groupId>
    <artifactId>money-manager</artifactId>
    <version>20.6.1</version>
    <packaging>jar</packaging>
    <name>Money Manager</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>14</maven.compiler.source>
        <maven.compiler.target>14</maven.compiler.target>
        <appModule>org.panteleyev.money</appModule>
        <appMainClass>org.panteleyev.money.MoneyApplication</appMainClass>
        <timestamp>${maven.build.timestamp}</timestamp>
        <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
        <!-- dependencies -->
        <javaApiForMySqlVersion>1.3.0</javaApiForMySqlVersion>
        <javaFxVersion>14.0.2.1</javaFxVersion>
        <javaFxHelpersVersion>1.4.0</javaFxHelpersVersion>
        <ofxParserVersion>0.1.1</ofxParserVersion>
        <controlsFxVersion>11.0.2</controlsFxVersion>
        <mysqlConnectorVersion>8.0.21</mysqlConnectorVersion>
        <jsoupVersion>1.13.1</jsoupVersion>
        <gsonVersion>2.8.6</gsonVersion>
        <testngVersion>6.14.3</testngVersion>
        <freemarkerVersion>2.3.29</freemarkerVersion>
        <commonsCsvVersion>1.8</commonsCsvVersion>
        <!-- plugins -->
        <mavenToolchainPluginVersion>3.0.0</mavenToolchainPluginVersion>
        <mavenCompilerPluginVersion>3.8.1</mavenCompilerPluginVersion>
        <mavenSurefirePluginVersion>3.0.0-M4</mavenSurefirePluginVersion>
        <mavenJarPluginVersion>3.2.0</mavenJarPluginVersion>
        <mavenDependencyPluginVersion>3.1.1</mavenDependencyPluginVersion>
        <javaFxPluginVersion>0.0.4</javaFxPluginVersion>
        <jpackageMavenPluginVersion>0.0.2</jpackageMavenPluginVersion>
        <!-- Test properties -->
        <money.test.mysql.host>localhost</money.test.mysql.host>
        <money.test.mysql.database>MoneyTestDB</money.test.mysql.database>
        <money.test.mysql.user>__define_mysql_user__</money.test.mysql.user>
        <money.test.mysql.password>__define_mysql_password__</money.test.mysql.password>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.panteleyev</groupId>
            <artifactId>java-api-for-mysql</artifactId>
            <version>${javaApiForMySqlVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.panteleyev</groupId>
            <artifactId>java-fx-helpers</artifactId>
            <version>${javaFxHelpersVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.panteleyev</groupId>
            <artifactId>ofx-parser</artifactId>
            <version>${ofxParserVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>${controlsFxVersion}</version>
        </dependency>
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>${mysqlConnectorVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>${jsoupVersion}</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>${gsonVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>${javaFxVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javaFxVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-web</artifactId>
            <version>${javaFxVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-swing</artifactId>
            <version>${javaFxVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-media</artifactId>
            <version>${javaFxVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>${javaFxVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-csv</artifactId>
            <version>${commonsCsvVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.freemarker</groupId>
            <artifactId>freemarker</artifactId>
            <version>${freemarkerVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testngVersion}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>${project.basedir}/src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-toolchains-plugin</artifactId>
                <version>${mavenToolchainPluginVersion}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>toolchain</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <toolchains>
                        <jdk>
                            <version>${maven.compiler.target}</version>
                        </jdk>
                    </toolchains>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${mavenCompilerPluginVersion}</version>
                <configuration>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${mavenJarPluginVersion}</version>
                <configuration>
                    <outputDirectory>target/jmods</outputDirectory>
                    <archive>
                        <manifestEntries>
                            <Main-Class>${appMainClass}</Main-Class>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>${mavenDependencyPluginVersion}</version>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <includeScope>runtime</includeScope>
                            <outputDirectory>target/jmods</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${mavenSurefirePluginVersion}</version>
                <configuration>
                    <suiteXmlFiles>
                        <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
                    </suiteXmlFiles>
                    <argLine>
                        --enable-preview
                        --add-exports javafx.base/com.sun.javafx.event=org.controlsfx.controls
                        --add-opens javafx.graphics/javafx.scene=org.controlsfx.controls
                        --add-reads org.panteleyev.mysqlapi=org.panteleyev.money
                    </argLine>
                    <systemPropertyVariables>
                        <mysql.host>${money.test.mysql.host}</mysql.host>
                        <mysql.user>${money.test.mysql.user}</mysql.user>
                        <mysql.password>${money.test.mysql.password}</mysql.password>
                        <mysql.database>${money.test.mysql.database}</mysql.database>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.panteleyev</groupId>
                <artifactId>jpackage-maven-plugin</artifactId>
                <version>${jpackageMavenPluginVersion}</version>
                <configuration>
                    <name>Money Manager</name>
                    <appVersion>${project.version}</appVersion>
                    <vendor>panteleyev.org</vendor>
                    <runtimeImage>${java.home}</runtimeImage>
                    <module>${appModule}/${appMainClass}</module>
                    <modulePath>target/jmods</modulePath>
                    <destination>target/dist</destination>
                    <javaOptions>
                        <option>--enable-preview</option>
                        <option>-Dfile.encoding=UTF-8</option>
                        <option>--add-exports javafx.base/com.sun.javafx.event=org.controlsfx.controls</option>
                    </javaOptions>
                </configuration>
                <executions>
                    <execution>
                        <id>mac</id>
                        <configuration>
                            <icon>icons/icons.icns</icon>
                        </configuration>
                    </execution>
                    <execution>
                        <id>win</id>
                        <configuration>
                            <icon>icons/icons.ico</icon>
                            <winMenu>true</winMenu>
                            <winDirChooser>true</winDirChooser>
                            <winUpgradeUuid>38dac4b6-91d2-4ca8-aacb-2e0cfd54127a</winUpgradeUuid>
                            <winMenuGroup>panteleyev.org</winMenuGroup>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>${javaFxPluginVersion}</version>
                <configuration>
                    <mainClass>${appModule}/${appMainClass}</mainClass>
                </configuration>
                <executions>
                    <execution>
                        <id>default-cli</id>
                        <configuration>
                            <options>
                                <option>--enable-preview</option>
                                <option>-Dfile.encoding=UTF-8</option>
                                <option>--add-exports</option>
                                <option>javafx.base/com.sun.javafx.event=org.controlsfx.controls</option>
                                <option>-Dmoney.profile=${money.profile}</option>
                            </options>
                        </configuration>
                    </execution>
                    <execution>
                        <id>debug</id>
                        <configuration>
                            <options>
                                <option>--enable-preview</option>
                                <option>-Dfile.encoding=UTF-8</option>
                                <option>--add-exports</option>
                                <option>javafx.base/com.sun.javafx.event=org.controlsfx.controls</option>
                                <option>-agentlib:jdwp=transport=dt_socket,server=n,address=${jpda.address}</option>
                                <option>-Dmoney.profile=${money.profile}</option>
                            </options>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
